# django-template

./: README.md  pyproject.toml
api/: views.py
my_project/: settings.py  urls.py
templates/: general_base.html
