[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Tomas Pytel <pytlicek@gmail.com>"]
readme = "README.md"
packages = [{include = "django_template"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
